# Production-Rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: query.py
backend/: requirements.txt
backend/api/: main.py  query.py
backend/ingestion/: loader.py  metadata.py  splitter.py
backend/rag/: guardrails.py  prompt.py
backend/retrieval/: vector_store.py
backend/vector_store/: index.faiss  index.pkl
core/: config.py
data/raw/incidents/: inc-001-crashloop-config-change.md  inc-002-high-cpu-latency.md  inc-003-oomkilled-after-deploy.md  inc-004-db-connection-exhaustion.md  inc-005-node-notready-evictions.md  inc-006-external-dependency-outage.md
data/raw/infra_docs/: cicd_pipeline_overview.md  database_architecture_connectivity.md  deployment_and_rollout_strategy.md  kubernetes_cluster_architecture.md  resource_management_autoscaling.md
data/raw/logs/: log_crashloopbackoff_patterns.md  log_database_connection_errors.md  log_http_5xx_errors.md  log_oomkilled_memory_patterns.md
data/raw/runbooks/: db_connection_exhuastion.md  debug_cashloop.md  debug_oomkilled.md  external_dependency_outage.md  failed_cicd_deployment.md  handle_5xx_errors.md  incident_response.md  investigate_high_cpu.md  node_not_ready.md  pod_scheduling_failure.md  (+2 more)
ingestion/: embeddings.py  ingest_pipeline.py  metadata.py
rag/: chain.py  guardrails.py  prompt.py
retrieval/: reranker.py  retriever.py  vector_store.py
tests/: debug_metadata.py  test_chain.py  test_loader.py  test_reranker.py  test_retriever.py  test_split.py  test_vector_store.py
ui/: app.py
